istio-system/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: istio-ingressgateway
    app.kubernetes.io/component: gateways
    app.kubernetes.io/instance: istio-system
    app.kubernetes.io/managed-by: maistra-istio-operator
    app.kubernetes.io/name: gateways
    app.kubernetes.io/part-of: istio
    app.kubernetes.io/version: 1.0.7-1.el8-3
    chart: gateways
    heritage: Tiller
    istio: ingressgateway
    maistra-version: 1.0.7
    maistra.io/owner: istio-system
    release: istio
  name: httpd
  namespace: istio-system
spec:
  port:
    targetPort: https
  tls:
    insecureEdgeTerminationPolicy: None
    termination: passthrough
  to:
    kind: Service
    name: istio-ingressgateway
    weight: 100
  wildcardPolicy: None
